correction du bug quand la navbar était collapsed avec le sticky

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -24,4 +24,5 @@
 
 .transparent-replace.hidden {
     display: none;
+    margin-bottom: 10px;
 }
